--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/style-resources": "^1.2.1",
     "boxicons": "^2.0.9",
-    "lodash": "^4.17.21",
-    "vuelidate": "^0.7.6",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "lodash": "^4.17.21",
+    "nuxt": "^2.15.7",
+    "vue-notification": "^1.3.20",
+    "vuelidate": "^0.7.6"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.7",
